# COMET

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
docs/paper/: 00_plan.md  01_introduction.md  01_introduction.tex  02_problem_formulation.md  02_problem_formulation.tex  03_methodology.md  03_methodology.tex  ref_chauhan2022_summary.md  ref_chauhan2022_writing_style.md  ref_vida_summary.md
experiments/: README.md
experiments/ginar_baseline/: prepare_data.py  run_ginar.py
experiments/notes/: cleanup_candidates.md  solar_pilot.md
experiments/plans/: experiment_design.md  experiment_matrix.yaml
experiments/results/: ECG5000_v2.md  ETTh1_gating.md  GinAR_baseline.md  Solar_pilot.md  codebook_ablation.md  compiled_all.json  pilot_solar.json
experiments/vida_e2e/: vida_e2e_patch.py
scripts/: compile_results.py  eval_all.sh  evaluate.py  post_ra0_and_resume.sh  run_codebook_ablation.sh  run_ecg5000.sh  run_ecg5000_v2.sh  run_ecg5000_v2_resume.sh  run_etth1_gating.sh  run_etth1_k4.sh  run_etth1_main.sh  run_etth1_no_ra.sh  run_ettm1_k4.sh  run_ettm1_main.sh  run_ettm1_resume.sh  run_solar_3gpu.sh  run_solar_compare.sh  run_solar_main.sh  run_traffic.sh  run_traffic_comet_full.sh  run_traffic_comet_gpu0.sh  run_traffic_comet_gpu1.sh  run_traffic_full.sh  run_traffic_main.sh  run_traffic_v2.sh  select_k.py  train.py
src/comet/: __init__.py
src/comet/data/: __init__.py  dataset.py
src/comet/models/: __init__.py  codebook.py  comet.py  decoder.py  encoder.py  forecast_head.py  patch_embedding.py  stgcn_heads.py  temporal.py
(+3 files in other folders)
