[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comet"
version = "1.0.0"
description = "COMET: Codebook-augmented Multivariate time-series forecasting with Expertise Transfer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "scikit-learn>=1.0",
    "tables>=3.7",
]

[project.optional-dependencies]
mamba = ["causal-conv1d>=1.1.0", "mamba-ssm>=2.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
